# fftw

./: .Rbuildignore  .dict.rds  .gitignore  DESCRIPTION  Makefile  NAMESPACE  README.md  configure  configure.ac  do
R/: fftw.r
man/: FFT.Rd  planFFT.Rd
pkg/: DESCRIPTION  cleanup  configure  configure.ac
pkg/src/: Makevars.in  fftw.c
src/: fftw.c
